--- a/src/assets/sass/componets/_episodes.scss
+++ b/src/assets/sass/componets/_episodes.scss
@@ -17,8 +17,9 @@
                     color: #fff;
                     cursor: pointer;
                 }
-                &.active a {
+                &.active .page-link {
                     text-decoration: underline;
+                    color: $alive;
                 }
             }
         }
