--- a/src/assets/sass/componets/_suggestions.scss
+++ b/src/assets/sass/componets/_suggestions.scss
@@ -16,6 +16,12 @@
                     margin: 0 auto;
                     display: flex;
                     flex-direction: column;
+                    .text {
+                        p {
+                            color: $alive;
+                            margin-bottom: gr(20);
+                        }
+                    }
                     input, textarea {
                         border-radius: 5px;
                         border: 0;
