--- a/src/assets/sass/componets/_characters.scss
+++ b/src/assets/sass/componets/_characters.scss
@@ -138,6 +138,7 @@
                     img {
                         object-fit: cover;
                         width: 100%;
+                        height: 100%;
                     }
                     .box-info {
                         color: #fff;
