--- a/src/assets/sass/componets/_header.scss
+++ b/src/assets/sass/componets/_header.scss
@@ -49,7 +49,7 @@
                     }
                     &.active {
                         a {
-                            color: #fff;
+                            //color: #fff;
                         }
                     }
                 }
